--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/sequelize": "^8.0.0",
+    "pg": "^8.7.1",
     "postgres": "^1.0.2",
     "postgresql": "^0.0.1",
     "reflect-metadata": "^0.1.13",
